webserver_sg.tf
# Creating Security Group 
resource "aws_security_group" "webserver_sg" {
    name        = "Webserver-SG"
    description = "Allow inbound traffic from ALB"
    vpc_id = "${aws_vpc.vpc.id}"
# Inbound Rules
  # HTTP access from anywhere
    ingress {
        from_port   = 80
        to_port     = 80
        protocol    = "tcp"
        cidr_blocks = [aws_security_group.web_sg.id]
    }
# HTTPS access from anywhere
    ingress {
        from_port   = 443
        to_port     = 443
        protocol    = "tcp"
        cidr_blocks = [aws_security_group.web_sg.id]
    }
# Outbound Rules
  # Internet access to anywhere
    egress {
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
    tags = {
        Name = "Webserver SG"
    }
}
